don't compress the photo immediately so as to avoid overflowing the server

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,11 @@ h1 {
 font-size:400%;
 }
 
+#main-table {
+  width: 100%;
+  height: 100%;
+}
+
 .invisible {
   visibility: hidden;
 }
@@ -40,10 +45,6 @@ font-size:400%;
 
 .half-height {
 	height: 30%;
-}
-
-.view {
-    margin-top: 70px;
 }
 
 .content {
